# VisionTrans

./: .gitignore  LICENSE  README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
dev_skills/: tauri-macos-fullscreen-overlay.md  tauri-macos-nswindow-pitfalls.md  tauri-screenshot-performance.md
doc/: macos-permissions.md  prd.md  tech-design.md  windows-permissions.md
scripts/: build-install.sh  debug-run.sh  generate-icons.py  setup-git-secrets.sh
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  hotkey.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: capture.rs  config.rs  mod.rs  permission.rs  translate.rs  window.rs  wordbook.rs
src-tauri/src/services/: llm_client.rs  mod.rs  permission.rs  screenshot.rs  wordbook.rs
src/hooks/: useTauriEvent.ts  useTauriInvoke.ts
src/lib/: constants.ts  i18n.ts  tauri-api.ts  xml-parser.ts
src/pages/onboarding/: OnboardingPage.tsx
src/pages/onboarding/steps/: ApiKeyStep.tsx  CompleteStep.tsx  HotkeyStep.tsx  PermissionStep.tsx  WelcomeStep.tsx
src/pages/overlay/: OverlayPage.tsx
src/pages/overlay/components/: Magnifier.tsx  SelectionToolbar.tsx  ToolBar.tsx
src/pages/overlay/hooks/: useBrushMode.ts  useCanvas.ts  useImageCrop.ts  useRectMode.ts  useSelection.ts
src/pages/result/: ResultPage.tsx
src/pages/result/components/: ResultCard.tsx
src/pages/settings/: SettingsPage.tsx
src/pages/settings/components/: ApiSettings.tsx  HotkeySettings.tsx  LanguageSettings.tsx  ProxySettings.tsx
src/pages/wordbook/: WordbookPage.tsx
src/styles/: globals.css
src/types/: config.ts  translate.ts  wordbook.ts
